Refactor documentation structure and enhance content clarity
- Updated import statements in browser.ts and server.ts for improved organization and clarity.
- Refactored documentation collections in browser.ts to streamline access to developer, expert, patient, and workspace sections.
- Enhanced formatting and interactivity in various MDX files, including the addition of clear instructions and structured components like Accordions and Tabs for better user experience.
- Improved content readability and consistency across multiple documentation sections, ensuring a more accessible experience for users.

--- a/src/content/docs/developer/en/index.mdx
+++ b/src/content/docs/developer/en/index.mdx
@@ -137,6 +137,8 @@ curl -X GET "https://api.eleva.care/v1/experts" \
 
 <Accordions>
   <Accordion title="Expert Management">
+    List and search experts and manage their profiles.
+
     - List and search experts
     - Retrieve expert profiles
     - Check expert availability
@@ -144,6 +146,8 @@ curl -X GET "https://api.eleva.care/v1/experts" \
 
   </Accordion>
   <Accordion title="Booking System">
+    Complete booking management capabilities.
+
     - Create bookings
     - Retrieve booking details
     - Cancel or reschedule bookings
@@ -312,16 +316,20 @@ Test your integration safely in our sandbox:
 
 <Accordions>
   <Accordion title="Getting Help">
-- **API Reference**: Detailed endpoint documentation
-- **Postman Collection**: Import our API collection
-- **Status Page**: [status.eleva.care](https://status.eleva.care)
-- **Developer Support**: developers@eleva.care
+    Access support resources and documentation.
+
+    - **API Reference**: Detailed endpoint documentation
+    - **Postman Collection**: Import our API collection
+    - **Status Page**: [status.eleva.care](https://status.eleva.care)
+    - **Developer Support**: developers@eleva.care
 
   </Accordion>
   <Accordion title="Community">
-- **GitHub**: Report issues and request features
-- **Discord**: Join our developer community
-- **Changelog**: Stay updated on API changes
+    Join our developer community and stay updated.
+
+    - **GitHub**: Report issues and request features
+    - **Discord**: Join our developer community
+    - **Changelog**: Stay updated on API changes
 
   </Accordion>
 </Accordions>
