--- a/src/content/docs/workspace/en/analytics/dashboard.mdx
+++ b/src/content/docs/workspace/en/analytics/dashboard.mdx
@@ -44,22 +44,22 @@ Access your analytics at **Partner Dashboard** → **Analytics**.
 
   </Tab>
   <Tab value="By Expert">
-See which experts generate the most revenue:
+    See which experts generate the most revenue:
 
-| Expert | Bookings | Revenue | Avg. Booking | Rating |
-|--------|----------|---------|--------------|--------|
-| Dr. Maria | 45 | €4,500 | €100 | 4.9 |
-| Dr. João | 38 | €3,800 | €100 | 4.8 |
-| Ana PT | 52 | €3,900 | €75 | 4.9 |
+    | Expert | Bookings | Revenue | Avg. Booking | Rating |
+    |--------|----------|---------|--------------|--------|
+    | Dr. Maria | 45 | €4,500 | €100 | 4.9 |
+    | Dr. João | 38 | €3,800 | €100 | 4.8 |
+    | Ana PT | 52 | €3,900 | €75 | 4.9 |
 
   </Tab>
   <Tab value="By Service">
-Understand which services perform best:
+    Understand which services perform best:
 
-- Most popular services
-- Highest revenue services
-- Growth trends by category
-- Pricing optimization insights
+    - Most popular services
+    - Highest revenue services
+    - Growth trends by category
+    - Pricing optimization insights
 
   </Tab>
 </Tabs>
@@ -116,19 +116,21 @@ See where patients come from:
 
 <Accordions>
   <Accordion title="Expert Comparison">
-Compare experts across metrics:
+    Compare experts across metrics:
 
-- Revenue generated
-- Patient satisfaction
-- Utilization rate
-- Cancellation rate
+    - Revenue generated
+    - Patient satisfaction
+    - Utilization rate
+    - Cancellation rate
 
   </Accordion>
   <Accordion title="Identify Opportunities">
-- **High performers**: Learn what works
-- **Improvement areas**: Support struggling experts
-- **Availability gaps**: Optimize scheduling
-- **Pricing analysis**: Identify optimal rates
+    Identify growth and improvement opportunities:
+
+    - **High performers**: Learn what works
+    - **Improvement areas**: Support struggling experts
+    - **Availability gaps**: Optimize scheduling
+    - **Pricing analysis**: Identify optimal rates
 
   </Accordion>
 </Accordions>
@@ -137,30 +139,30 @@ Compare experts across metrics:
 
 <Tabs items={['Demographics', 'Satisfaction', 'Retention']}>
   <Tab value="Demographics">
-Understand your patient base:
+    Understand your patient base:
 
-- Location distribution
-- Language preferences
-- Service preferences
-- Return rate
+    - Location distribution
+    - Language preferences
+    - Service preferences
+    - Return rate
 
   </Tab>
   <Tab value="Satisfaction">
-Track satisfaction metrics:
+    Track satisfaction metrics:
 
-- **NPS Score**: Net Promoter Score
-- **Average Rating**: Overall satisfaction
-- **Review Volume**: Feedback received
+    - **NPS Score**: Net Promoter Score
+    - **Average Rating**: Overall satisfaction
+    - **Review Volume**: Feedback received
     - **Sentiment Analysis**: Positive vs. negative
 
   </Tab>
   <Tab value="Retention">
-Monitor patient loyalty:
+    Monitor patient loyalty:
 
-- First-time vs. returning patients
-- Patient lifetime value
-- Churn rate
-- Retention by service type
+    - First-time vs. returning patients
+    - Patient lifetime value
+    - Churn rate
+    - Retention by service type
 
   </Tab>
 </Tabs>
@@ -169,29 +171,29 @@ Monitor patient loyalty:
 
 <Accordions>
   <Accordion title="Custom Reports">
-Build custom reports with:
+    Build custom reports with:
 
-- Custom date ranges
-- Multiple metrics
-- Advanced filters
-- Scheduled delivery
+    - Custom date ranges
+    - Multiple metrics
+    - Advanced filters
+    - Scheduled delivery
 
   </Accordion>
   <Accordion title="Data Export">
-Export data for external analysis:
+    Export data for external analysis:
 
-- CSV download
-- API access
-- Integration with BI tools
-- Automated exports
+    - CSV download
+    - API access
+    - Integration with BI tools
+    - Automated exports
 
   </Accordion>
   <Accordion title="Benchmarking">
-Compare your performance:
+    Compare your performance:
 
-- Industry benchmarks
-- Similar workspace comparison
-- Best practices insights
+    - Industry benchmarks
+    - Similar workspace comparison
+    - Best practices insights
 
   </Accordion>
 </Accordions>
