--- a/src/content/docs/workspace/en/index.mdx
+++ b/src/content/docs/workspace/en/index.mdx
@@ -64,6 +64,8 @@ Whether you're running a physical clinic, an online practice, or a hybrid model,
 
 <Tabs items={['What We Provide', 'What You Provide']}>
   <Tab value="What We Provide">
+    Platform features and support:
+
     - Booking and scheduling system
     - Secure video consultation platform
     - Payment processing with automatic payouts
@@ -73,6 +75,8 @@ Whether you're running a physical clinic, an online practice, or a hybrid model,
 
   </Tab>
   <Tab value="What You Provide">
+    Your contributions to the partnership:
+
     - Your team of healthcare professionals
     - Patient acquisition and marketing
     - Brand and reputation building
@@ -126,10 +130,10 @@ Whether you're running a physical clinic, an online practice, or a hybrid model,
   <Tab value="Enterprise">
     **Custom pricing** - For large organizations
 
-- Unlimited expert profiles
-- White-label options
-- API access & webhooks
-- Dedicated account manager
+    - Unlimited expert profiles
+    - White-label options
+    - API access & webhooks
+    - Dedicated account manager
 
   </Tab>
 </Tabs>
