--- a/src/content/docs/workspace/en/team/experts.mdx
+++ b/src/content/docs/workspace/en/team/experts.mdx
@@ -34,21 +34,21 @@ Your team of healthcare professionals is the heart of your workspace. This guide
 
 <Accordions>
   <Accordion title="Invite Existing Eleva Care Experts">
-If the expert already has an Eleva Care profile:
+    If the expert already has an Eleva Care profile:
 
-1. Go to **Team Management** → **Invite Expert**
-2. Enter their email address
-3. They receive an invitation to join your workspace
-4. Once accepted, their profile appears under your workspace
+    1. Go to **Team Management** → **Invite Expert**
+    2. Enter their email address
+    3. They receive an invitation to join your workspace
+    4. Once accepted, their profile appears under your workspace
 
   </Accordion>
   <Accordion title="Invite New Experts">
-For experts new to Eleva Care:
+    For experts new to Eleva Care:
 
-1. Go to **Team Management** → **Invite New Expert**
-2. Enter their email and name
-3. They receive an invitation to create an Eleva Care profile
-4. After setup, they're automatically added to your workspace
+    1. Go to **Team Management** → **Invite New Expert**
+    2. Enter their email and name
+    3. They receive an invitation to create an Eleva Care profile
+    4. After setup, they're automatically added to your workspace
 
   </Accordion>
 </Accordions>
@@ -123,17 +123,21 @@ This transparency helps build trust with your team.
 
 <Tabs items={['Admins Can', 'Admins Cannot']}>
   <Tab value="Admins Can">
-- View expert availability and bookings
-- Access aggregate analytics
-- Configure workspace-wide settings
-- Remove experts from the workspace
+    Workspace administrators have these permissions:
+
+    - View expert availability and bookings
+    - Access aggregate analytics
+    - Configure workspace-wide settings
+    - Remove experts from the workspace
 
   </Tab>
   <Tab value="Admins Cannot">
-- Change expert's individual settings
-- Access expert's personal financial details
-- Modify expert's profile without permission
-- View bookings from other workspaces
+    Administrators cannot:
+
+    - Change expert's individual settings
+    - Access expert's personal financial details
+    - Modify expert's profile without permission
+    - View bookings from other workspaces
 
   </Tab>
 </Tabs>
@@ -172,17 +176,21 @@ To remove an expert from your workspace:
 
 <Accordions>
   <Accordion title="Onboarding">
-1. **Clear Expectations**: Explain your marketing fee and value proposition
-2. **Support**: Help with profile optimization
-3. **Training**: Introduce them to the platform features
-4. **Communication**: Set up regular check-ins
+    Best practices for onboarding new experts:
+
+    1. **Clear Expectations**: Explain your marketing fee and value proposition
+    2. **Support**: Help with profile optimization
+    3. **Training**: Introduce them to the platform features
+    4. **Communication**: Set up regular check-ins
 
   </Accordion>
   <Accordion title="Retention">
-1. **Competitive Fees**: Keep your marketing fee reasonable
-2. **Patient Volume**: Focus on driving bookings to your experts
-3. **Support**: Provide administrative and marketing support
-4. **Recognition**: Highlight top performers
+    Keep your experts engaged and satisfied:
+
+    1. **Competitive Fees**: Keep your marketing fee reasonable
+    2. **Patient Volume**: Focus on driving bookings to your experts
+    3. **Support**: Provide administrative and marketing support
+    4. **Recognition**: Highlight top performers
 
   </Accordion>
 </Accordions>
