--- a/src/content/docs/workspace/en/getting-started/setup.mdx
+++ b/src/content/docs/workspace/en/getting-started/setup.mdx
@@ -15,15 +15,15 @@ This guide walks you through the complete setup process for your workspace on El
 
     Before you can set up your workspace, apply for partnership:
 
-1. Visit [eleva.care/contact?partner=true](https://eleva.care/contact?partner=true)
-2. Fill out the partnership application form
-3. Provide your credentials and services
+    1. Visit [eleva.care/contact?partner=true](https://eleva.care/contact?partner=true)
+    2. Fill out the partnership application form
+    3. Provide your credentials and services
     4. Our team reviews your application (typically 5 business days)
 
-<Callout type="info">
+    <Callout type="info">
       **Approval Requirements**: We review your credentials, services offered, and alignment with
       our women's health mission.
-</Callout>
+    </Callout>
 
   </Step>
   <Step>
@@ -41,11 +41,11 @@ This guide walks you through the complete setup process for your workspace on El
     - Business email, phone, website, and address
 
     **Service Categories:**
-- Women's Health & OB/GYN
-- Mental Health & Therapy
-- Nutrition & Dietetics
-- Fitness & Physical Therapy
-- Wellness Coaching
+    - Women's Health & OB/GYN
+    - Mental Health & Therapy
+    - Nutrition & Dietetics
+    - Fitness & Physical Therapy
+    - Wellness Coaching
 
   </Step>
   <Step>
@@ -55,6 +55,8 @@ This guide walks you through the complete setup process for your workspace on El
 
     <Tabs items={['Booking Settings', 'Payment Settings']}>
       <Tab value="Booking Settings">
+        Configure your booking preferences:
+
         - **Cancellation Policy**: Set terms (24h, 48h, etc.)
         - **Buffer Time**: Time between appointments
         - **Booking Window**: How far in advance clients can book
@@ -62,6 +64,8 @@ This guide walks you through the complete setup process for your workspace on El
 
       </Tab>
       <Tab value="Payment Settings">
+        Set up payment processing:
+
         - **Connect Stripe**: Link your Stripe account for receiving payments
         - **Currency**: Set your preferred currency (EUR, USD, etc.)
         - **Payout Schedule**: Choose weekly or monthly payouts
@@ -69,9 +73,9 @@ This guide walks you through the complete setup process for your workspace on El
       </Tab>
     </Tabs>
 
-<Callout type="warning">
-  **Important**: You must connect a Stripe account before your experts can receive payouts.
-</Callout>
+    <Callout type="warning">
+      **Important**: You must connect a Stripe account before your experts can receive payouts.
+    </Callout>
 
   </Step>
   <Step>
@@ -86,24 +90,25 @@ This guide walks you through the complete setup process for your workspace on El
 | Premium | 20-25% | 60% |
 
     **Example**: For a €100 booking with 15% workspace fee:
+
     - Eleva Platform: €8-12 (8-12%)
     - Your Workspace: €15 (15%)
     - Expert: €73-77 (73-77%)
 
-[Learn more about revenue sharing →](/docs/workspace/pricing/revenue)
+    [Learn more about revenue sharing →](/docs/workspace/pricing/revenue)
 
   </Step>
   <Step>
     ### Invite Your Team
 
-Once your workspace is set up, invite your healthcare professionals:
+    Once your workspace is set up, invite your healthcare professionals:
 
-1. Go to **Team Management** in your dashboard
-2. Click **Invite Expert**
-3. Enter the expert's email address
-4. They'll receive an invitation to join your workspace
+    1. Go to **Team Management** in your dashboard
+    2. Click **Invite Expert**
+    3. Enter the expert's email address
+    4. They'll receive an invitation to join your workspace
 
-[Learn about team management →](/docs/workspace/team/experts)
+    [Learn about team management →](/docs/workspace/team/experts)
 
   </Step>
   <Step>
