Update metadata in trust documents for consistency
Added metadata exports to the Data Processing Agreement and Security documents in English, Spanish, and Portuguese to enhance SEO and improve content management. Adjusted title and description formatting for consistency across all language versions.

--- a/src/content/trust/dpa/en.mdx
+++ b/src/content/trust/dpa/en.mdx
@@ -3,6 +3,11 @@ title: "Data Processing Agreement | Eleva Care"
 description: "Review Eleva Care's data processing agreement outlining how we handle and protect your healthcare data."
 ---
 
+export const metadata = {
+  title: "Data Processing Agreement | Eleva Care",
+  description: "Review Eleva Care's data processing agreement outlining how we handle and protect your healthcare data."
+};
+
 # Data Processing Agreement (DPA)
 
 _Effective Date: December 31, 2025_
