--- a/src/content/trust/dpa/es.mdx
+++ b/src/content/trust/dpa/es.mdx
@@ -3,6 +3,11 @@ title: "Acuerdo de Procesamiento de Datos | Eleva Care"
 description: "Revise el acuerdo de procesamiento de datos de Eleva Care que describe cómo manejamos y protegemos sus datos de salud."
 ---
 
+export const metadata = {
+  title: "Acuerdo de Procesamiento de Datos | Eleva Care",
+  description: "Revise el acuerdo de procesamiento de datos de Eleva Care que describe cómo manejamos y protegemos sus datos de salud."
+};
+
 # Acuerdo de Tratamiento de Datos (DPA)
 
 _Fecha de vigencia: 31 de diciembre de 2025_
