--- a/src/content/trust/dpa/pt-BR.mdx
+++ b/src/content/trust/dpa/pt-BR.mdx
@@ -3,6 +3,11 @@ title: "Acordo de Processamento de Dados | Eleva Care"
 description: "Revise o acordo de processamento de dados da Eleva Care que descreve como tratamos e protegemos seus dados de saúde."
 ---
 
+export const metadata = {
+  title: "Acordo de Processamento de Dados | Eleva Care",
+  description: "Revise o acordo de processamento de dados da Eleva Care que descreve como tratamos e protegemos seus dados de saúde."
+};
+
 # Acordo de Processamento de Dados (DPA)
 
 _Data de vigência: 31 de dezembro de 2025_
