--- a/src/content/trust/security/pt-BR.mdx
+++ b/src/content/trust/security/pt-BR.mdx
@@ -3,6 +3,11 @@ title: "Segurança e Conformidade | Eleva Care"
 description: "Saiba mais sobre as medidas de segurança, certificações e compromisso da Eleva Care para proteger seus dados de saúde com conformidade GDPR, LGPD e HIPAA."
 ---
 
+export const metadata = {
+  title: "Segurança e Conformidade | Eleva Care",
+  description: "Saiba mais sobre as medidas de segurança, certificações e compromisso da Eleva Care para proteger seus dados de saúde com conformidade GDPR, LGPD e HIPAA."
+};
+
 # Segurança
 
 _Última atualização: 31 de dezembro de 2025_
