--- a/src/content/trust/security/pt.mdx
+++ b/src/content/trust/security/pt.mdx
@@ -1,7 +1,13 @@
 ---
-title: "Segurança e Conformidade | Eleva Care"
-description: "Saiba mais sobre as medidas de segurança, certificações e compromisso da Eleva Care para proteger os seus dados de saúde com conformidade GDPR, LGPD e HIPAA."
+title: 'Segurança e Conformidade | Eleva Care'
+description: 'Saiba mais sobre as medidas de segurança, certificações e compromisso da Eleva Care para proteger os seus dados de saúde com conformidade GDPR, LGPD e HIPAA.'
 ---
+
+export const metadata = {
+  title: 'Segurança e Conformidade | Eleva Care',
+  description:
+    'Saiba mais sobre as medidas de segurança, certificações e compromisso da Eleva Care para proteger os seus dados de saúde com conformidade GDPR, LGPD e HIPAA.',
+};
 
 # Segurança
 
