--- a/src/content/trust/security/en.mdx
+++ b/src/content/trust/security/en.mdx
@@ -1,7 +1,13 @@
 ---
-title: "Security & Compliance | Eleva Care"
+title: 'Security & Compliance | Eleva Care'
 description: "Learn about Eleva Care's security measures, certifications, and commitment to protecting your healthcare data with GDPR, LGPD, and HIPAA compliance."
 ---
+
+export const metadata = {
+  title: 'Security & Compliance | Eleva Care',
+  description:
+    "Learn about Eleva Care's security measures, certifications, and commitment to protecting your healthcare data with GDPR, LGPD, and HIPAA compliance.",
+};
 
 # Security
 
