--- a/src/content/trust/security/es.mdx
+++ b/src/content/trust/security/es.mdx
@@ -3,6 +3,11 @@ title: "Seguridad y Cumplimiento | Eleva Care"
 description: "Conozca las medidas de seguridad, certificaciones y compromiso de Eleva Care para proteger sus datos de salud con cumplimiento de GDPR, LGPD y HIPAA."
 ---
 
+export const metadata = {
+  title: "Seguridad y Cumplimiento | Eleva Care",
+  description: "Conozca las medidas de seguridad, certificaciones y compromiso de Eleva Care para proteger sus datos de salud con cumplimiento de GDPR, LGPD y HIPAA."
+};
+
 # Seguridad
 
 _Última actualización: 31 de diciembre de 2025_
