--- a/src/content/help/expert/en/earnings/pricing.mdx
+++ b/src/content/help/expert/en/earnings/pricing.mdx
@@ -214,7 +214,7 @@ Setting the right price is crucial for building a successful practice on Eleva C
   </Accordion>
   <Accordion title="Ignoring Fees">
     - Price €100, think you'll earn €100
-    - Forget to factor in 8-20% fees
+    - Forget to factor in platform fees (8% for Top Experts with subscription, 12% for Community with subscription, or up to 20% commission-only)
     - End up with lower effective rate
   </Accordion>
   <Accordion title="One-Size-Fits-All">
