--- a/src/content/help/expert/en/getting-started/availability.mdx
+++ b/src/content/help/expert/en/getting-started/availability.mdx
@@ -179,16 +179,19 @@ Connect your Google Calendar for two-way sync:
 
 <Accordions>
   <Accordion title="Consistency">
-    - Set regular hours patients can rely on - Update availability at least 2 weeks in advance -
-    Communicate changes promptly
+    - Set regular hours patients can rely on
+    - Update availability at least 2 weeks in advance
+    - Communicate changes promptly
   </Accordion>
   <Accordion title="Realistic Scheduling">
-    - Don't overbook yourself - Include time for breaks and notes - Account for different
-    consultation types
+    - Don't overbook yourself
+    - Include time for breaks and notes
+    - Account for different consultation types
   </Accordion>
   <Accordion title="Time Zone Awareness">
-    - Consider your target patient base - Offer evening slots for working patients - Remember time
-    differences for international patients
+    - Consider your target patient base
+    - Offer evening slots for working patients
+    - Remember time differences for international patients
   </Accordion>
 </Accordions>
 
@@ -196,16 +199,20 @@ Connect your Google Calendar for two-way sync:
 
 <Accordions>
   <Accordion title="Appointments Not Showing">
-    - Check calendar sync status - Verify timezone settings - Ensure service is active - Check
-    minimum notice requirements
+    - Check calendar sync status
+    - Verify timezone settings
+    - Ensure service is active
+    - Check minimum notice requirements
   </Accordion>
   <Accordion title="Double Bookings">
-    - Enable Google Calendar sync - Add buffer time between appointments - Review availability
-    settings
+    - Enable Google Calendar sync
+    - Add buffer time between appointments
+    - Review availability settings
   </Accordion>
   <Accordion title="Sync Issues">
-    1. Disconnect Google Calendar 2. Reconnect with fresh authorization 3. Check sync interval
-    settings
+    1. Disconnect Google Calendar
+    2. Reconnect with fresh authorization
+    3. Check sync interval settings
   </Accordion>
 </Accordions>
 
