--- a/src/content/help/expert/en/getting-started/services.mdx
+++ b/src/content/help/expert/en/getting-started/services.mdx
@@ -152,7 +152,7 @@ Services are the consultations you offer to patients. Each service has its own d
 
     - Unlimited services
     - Advanced customization
-    - Package offerings (coming soon)
+    - Package offerings
   </Tab>
 </Tabs>
 
