--- a/src/content/help/expert/en/top-expert/benefits.mdx
+++ b/src/content/help/expert/en/top-expert/benefits.mdx
@@ -120,13 +120,13 @@ Top Expert status unlocks premium features and benefits designed to help you gro
 ## Coming Soon
 
 <Cards>
-  <Card title="Group Sessions" href="#">
+  <Card title="Group Sessions">
     Host webinar-style appointments with multiple patients per session for higher earning potential.
   </Card>
-  <Card title="Package Offerings" href="#">
+  <Card title="Package Offerings">
     Sell consultation packages with bundle discounts to improve patient retention.
   </Card>
-  <Card title="API Access" href="#">
+  <Card title="API Access">
     Integrate with your systems, create custom booking flows, and automate scheduling.
   </Card>
 </Cards>
