--- a/src/content/help/expert/en/top-expert/requirements.mdx
+++ b/src/content/help/expert/en/top-expert/requirements.mdx
@@ -112,16 +112,16 @@ You must meet **all** of the following criteria:
 
     - Quarterly re-evaluation
     - Same requirements each quarter
-    - One "grace" quarter if you slip slightly
+    - One-quarter grace period if you slip slightly
   </Tab>
   <Tab value="Grace Period">
     **Grace Period**
 
     If you narrowly miss criteria:
 
-    - One-month warning period
-    - Opportunity to improve metrics
-    - Full demotion if not improved
+    - One-quarter grace period to improve
+    - Opportunity to improve metrics during the quarter
+    - Full demotion if not improved by next evaluation
 
     <Callout type="warning">
       Significant violations (e.g., 15% cancellation rate, 3.5 star rating) result in immediate status loss without grace period.
