--- a/src/content/help/expert/pt/earnings/pricing.mdx
+++ b/src/content/help/expert/pt/earnings/pricing.mdx
@@ -157,7 +157,7 @@ Definir o preço certo é crucial para construir uma prática de sucesso na Elev
 
     **Exemplo**: Consulta de 60 min + 30 min preparação/notas = 90 min tempo total de trabalho
 
-    Se cobra €120 e trabalha 90 minutos, a sua taxa efetiva é €80/hora (menos taxas).
+    Se cobra €120 e trabalha 90 minutos, a sua taxa bruta é €80/hora. Após a comissão de 12% da plataforma, recebe €105.60, o que resulta numa taxa efetiva de €70.40/hora (menos taxas).
 
   </Step>
 </Steps>
@@ -233,7 +233,7 @@ Definir o preço certo é crucial para construir uma prática de sucesso na Elev
   </Accordion>
   <Accordion title="Ignorar Taxas">
     - Preço €100, pensa que vai ganhar €100
-    - Esquece de considerar 8-20% de taxas
+    - Esquece de considerar as taxas da plataforma (8% para Top Experts com subscrição, 12% para Community com subscrição, ou até 20% apenas comissão)
     - Acaba com taxa efetiva mais baixa
 
   </Accordion>
