--- a/src/content/help/expert/pt/top-expert/benefits.mdx
+++ b/src/content/help/expert/pt/top-expert/benefits.mdx
@@ -54,7 +54,7 @@ O estatuto Top Expert desbloqueia funcionalidades e benefícios premium desenhad
 
   </Accordion>
   <Accordion title="Distintivo Top Expert">
-    Um distintivo distintivo no seu perfil:
+    Um símbolo distintivo no seu perfil:
 
     - Credibilidade instantânea com pacientes
     - Visível nos resultados de pesquisa
