--- a/src/content/help/patient/en/faq.mdx
+++ b/src/content/help/patient/en/faq.mdx
@@ -90,9 +90,12 @@ You can easily reschedule from your patient dashboard:
 </Accordion>
 
 <Accordion title="Can I book appointments for family members?" id="family-members">
-  Currently, each patient needs their own account. For minors, a parent or guardian should: - Create
-  the account - Book the appointment - Attend the consultation with the minor
-</Accordion>
+  Currently, each patient needs their own account. For minors, a parent or guardian should:
+
+- Create the account
+- Book the appointment
+- Attend the consultation with the minor
+  </Accordion>
 
 </Accordions>
 
@@ -112,13 +115,20 @@ You can easily reschedule from your patient dashboard:
 <Accordion title="What technology do I need?" id="tech-requirements">
   <Tabs items={['Mobile', 'Computer']}>
     <Tab value="Mobile">
-      **For smartphones and tablets:** - Camera and microphone (built-in) - Stable internet or WiFi
-      connection - Updated mobile browser (Safari, Chrome)
+      **For smartphones and tablets:**
+
+      - Camera and microphone (built-in)
+      - Stable internet or WiFi connection
+      - Updated mobile browser (Safari, Chrome)
     </Tab>
     <Tab value="Computer">
-      **For laptops and desktops:** - Webcam and microphone - Stable internet connection - Latest
-      browser version (Chrome, Safari, Firefox, Edge)
+      **For laptops and desktops:**
+
+      - Webcam and microphone
+      - Stable internet connection
+      - Latest browser version (Chrome, Safari, Firefox, Edge)
     </Tab>
+
   </Tabs>
 </Accordion>
 
@@ -136,10 +146,13 @@ Don't panic! Try these steps:
 </Accordion>
 
 <Accordion title="Are consultations confidential?" id="confidential">
-  **Absolutely.** All consultations are: - ✅ Private and encrypted end-to-end - ✅ Accessible only
-  to you and your expert - ✅ Compliant with GDPR and healthcare privacy regulations - ✅ Never
-  recorded without your explicit consent
-</Accordion>
+  **Absolutely.** All consultations are:
+
+- ✅ Private and encrypted end-to-end
+- ✅ Accessible only to you and your expert
+- ✅ Compliant with GDPR and healthcare privacy regulations
+- ✅ Never recorded without your explicit consent
+  </Accordion>
 
 </Accordions>
 
