--- a/src/content/help/workspace/en/getting-started/setup.mdx
+++ b/src/content/help/workspace/en/getting-started/setup.mdx
@@ -84,16 +84,16 @@ This guide walks you through the complete setup process for your workspace on El
     As a workspace owner, you earn a marketing fee from each booking:
 
 | Workspace Tier | Marketing Fee | Expert Minimum |
-|----------------|---------------|----------------|
-| Basic | 10-15% | 70% |
-| Standard | 15-20% | 65% |
-| Premium | 20-25% | 60% |
+| -------------- | ------------- | -------------- |
+| Basic          | 10-15%        | 70%            |
+| Standard       | 15-20%        | 65%            |
+| Premium        | 20-25%        | 60%            |
 
     **Example**: For a €100 booking with 15% workspace fee:
 
-    - Eleva Platform: €8-12 (8-12%)
+    - Eleva Platform: €15 (15%)
     - Your Workspace: €15 (15%)
-    - Expert: €73-77 (73-77%)
+    - Expert: €70 (70%)
 
     [Learn more about revenue sharing →](/help/workspace/pricing/revenue)
 
