--- a/src/content/help/workspace/en/index.mdx
+++ b/src/content/help/workspace/en/index.mdx
@@ -147,13 +147,13 @@ Our three-party revenue model ensures fair compensation for everyone:
 | Party | Revenue Share | Purpose |
 |-------|---------------|---------|
 | **Patient** | Pays full amount | For healthcare services |
-| **Expert** | 60-77% minimum | Service delivery |
+| **Expert** | 60-82% minimum | Service delivery |
 | **Workspace** | 10-25% | Patient acquisition, marketing |
-| **Eleva** | 8-20% | Platform, technology, payments |
+| **Eleva** | 8-15% | Platform, technology, payments |
 
 <Callout type="success">
   **Expert Protection**: Experts always receive at least 60% of the booking amount. Combined fees
-  (platform + workspace) never exceed 40%.
+  (platform + workspace) never exceed 40%. Actual fees vary based on expert tier and subscription plan, with platform and workspace percentages mutually constrained.
 </Callout>
 
 [Learn about revenue sharing →](/help/workspace/pricing/revenue)
