--- a/src/content/help/workspace/en/pricing/revenue.mdx
+++ b/src/content/help/workspace/en/pricing/revenue.mdx
@@ -105,10 +105,10 @@ Marketing fee: 15%
 Monthly Revenue:
 ├─ Gross bookings: $10,000
 ├─ Your workspace revenue: $1,500 (15%)
-├─ Workspace subscription: $199 (if Professional plan)
-└─ Total workspace income: ~$1,699/month
+├─ Workspace subscription cost: -$199 (if Professional plan)
+└─ Net workspace income: ~$1,301/month
 
-Annual projection: ~$20,388/year
+Annual projection: ~$15,612/year (net after subscription)
 ```
 
 ## Setting Your Marketing Fee
@@ -174,9 +174,9 @@ Action: Please set a fee between 10-25%
 If combined fees would exceed 40%:
 
 ```
-Error: Combined fees (35% workspace + 12% platform = 47%) 
+Error: Combined fees (25% workspace + 20% platform = 45%) 
        would exceed maximum 40% for Community Expert.
-Action: Reduce workspace fee or wait for expert tier upgrade.
+Action: Reduce workspace fee to 20% or wait for expert tier upgrade.
 ```
 
 ## Expert Tier Benefits
@@ -197,7 +197,7 @@ Benefit: More bookings from workspace's patients
 
 ```
 Solo: 85-92% net (no workspace fee)
-With Workspace: 65-82% net (includes workspace fee)
+With Workspace: 60-82% net (includes workspace fee)
 
 Trade-off: Lower net per booking
 Benefit: More bookings from workspace's patients
