--- a/src/content/help/workspace/en/pricing/plans.mdx
+++ b/src/content/help/workspace/en/pricing/plans.mdx
@@ -9,17 +9,17 @@ Choose the workspace plan that fits your size and needs. All plans include platf
 
 ## Plan Comparison
 
-| Feature | Starter | Professional | Enterprise |
-|---------|---------|--------------|------------|
-| **Monthly Price** | €99 | €199 | Custom |
-| **Expert Profiles** | Up to 3 | Up to 10 | Unlimited |
-| **Analytics** | Basic | Advanced | Enterprise |
-| **Support** | Email | Priority | 24/7 + Account Manager |
-| **Branding** | Standard | Custom booking pages | Full white-label |
-| **Domain** | eleva.care/ws | Custom slug | Custom domain |
-| **API Access** | ❌ | ❌ | ✅ |
-| **Multi-location** | ❌ | ✅ | ✅ |
-| **SLA** | Standard | 99.5% uptime | Custom |
+| Feature             | Starter       | Professional         | Enterprise             |
+| ------------------- | ------------- | -------------------- | ---------------------- |
+| **Monthly Price**   | €99           | €199                 | Custom                 |
+| **Expert Profiles** | Up to 3       | Up to 10             | Unlimited              |
+| **Analytics**       | Basic         | Advanced             | Enterprise             |
+| **Support**         | Email         | Priority             | 24/7 + Account Manager |
+| **Branding**        | Standard      | Custom booking pages | Full white-label       |
+| **Domain**          | eleva.care/ws | Custom slug          | Custom domain          |
+| **API Access**      | ❌            | ❌                   | ✅                     |
+| **Multi-location**  | ❌            | ✅                   | ✅                     |
+| **SLA**             | Standard      | 99.5% uptime         | Custom                 |
 
 ## Starter Plan — €99/month
 
@@ -58,7 +58,7 @@ Everything in Starter, plus:
 - Marketing support and resources
 - Team management dashboard
 - Multi-location support
-- Custom domain integration (`eleva.care/your-workspace`)
+- Custom slug (`eleva.care/your-workspace`)
 
 ### Best For
 
@@ -68,7 +68,8 @@ Everything in Starter, plus:
 - Practices focused on scaling
 
 <Callout type="tip">
-  **Most Popular**: Professional is our most popular plan for workspaces with 4-10 healthcare professionals.
+  **Most Popular**: Professional is our most popular plan for workspaces with 4-10 healthcare
+  professionals.
 </Callout>
 
 ## Enterprise Plan — Custom Pricing
@@ -101,11 +102,11 @@ Everything in Professional, plus:
 
 Workspaces with larger teams may qualify for volume discounts:
 
-| Team Size | Discount |
-|-----------|----------|
-| 20-50 experts | 10% off |
-| 51-100 experts | 15% off |
-| 100+ experts | Custom pricing |
+| Team Size      | Discount       |
+| -------------- | -------------- |
+| 20-50 experts  | 10% off        |
+| 51-100 experts | 15% off        |
+| 101+ experts   | Custom pricing |
 
 Contact our sales team to discuss volume pricing.
 
