Update Help Center content and routing
- Renamed documentation references from "Documentation portals" to "Help Center portals" for clarity.
- Enhanced locale handling in routing patterns to prevent drift and ensure accurate path matching.
- Updated metadata and comments in various components to reflect the new Help Center structure.
- Refactored search dialog components to align with Help Center terminology and functionality.
- Improved documentation for Help Center components, including examples and usage instructions.

--- a/src/content/help/expert/pt/earnings/pricing.mdx
+++ b/src/content/help/expert/pt/earnings/pricing.mdx
@@ -143,6 +143,9 @@ Definir o preço certo é crucial para construir uma prática de sucesso na Elev
   <Step>
     ### Considerar Taxas da Plataforma
 
+    Este exemplo usa a taxa de 12% (Community Expert com subscrição mensal/anual).
+    A sua taxa pode variar: 8% para Top Experts com subscrição, ou até 20% para planos apenas comissão.
+
     | Seu Preço | Comissão (12%) | Você Recebe |
     |-----------|----------------|-------------|
     | €80 | €9.60 | €70.40 |
